--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,9 +11,11 @@
 		<title>My Astro Site</title>
 	</head>
 	<body>
-		<a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
-		<h1>Astro</h1>
+        <a href="/blog/">Blog</a>
+		<h1>My blog</h1>
+
+        <p>This is where I will post about my journey learning Astro.</p>
 	</body>
 </html>
