--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,11 +1,12 @@
 ---
+import '../styles/global.css';
 const pageTitle = "About Me";
 
 const identity = {
   firstName: "Carlos",
   country: "México",
   occupation: "Front-End Developer",
-  hobbies: ["videogames", "reading poetry", "judo", "gym"],
+  hobbies: ["playing videogames", "reading poetry", "judo", "gym"],
 };
 
 const skills = ["HTML", "CSS", "JavaScript", "TypeScript", "React", "Astro"];
@@ -13,6 +14,10 @@ const skills = ["HTML", "CSS", "JavaScript", "TypeScript", "React", "Astro"];
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -22,6 +27,17 @@ const goal = 3;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{pageTitle}</title>
+    <style define:vars={{skillColor, fontWeight, textCase}}>
+        h1 {
+            color: purple;
+            font-size: 4rem;
+        }
+        .skill {
+            color: var(--skillColor);
+            font-weight: var(--fontWeight);
+            text-transform: var(--textCase);
+        }
+    </style>
   </head>
   <body>
     <a href="/">Home</a>
@@ -43,20 +59,20 @@ const goal = 3;
     <ul>
       <li>My name is {identity.firstName}.</li>
       <li>
-        I live in {identity.country} and I work as a {identity.occupation}.
+        I live in {identity.country} and I'm looking to work as a {identity.occupation}.
       </li>
       {
         identity.hobbies.length >= 2 && (
           <li>
             Two of my hobbies are: {identity.hobbies[0]} and{" "}
-            {identity.hobbies[1]}
+            {identity.hobbies[1]}.
           </li>
         )
       }
     </ul>
     <p>My skills are:</p>
     <ul>
-      {skills.map((skill) => <li>{skill}</li>)}
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
     </ul>
 
     {happy && <p>I am happy to be learning Astro!</p>}
