--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 ---
 
@@ -11,9 +13,7 @@ import '../styles/global.css';
 		<title>My Astro Site</title>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+        <Navigation />
 		<h1>My blog</h1>
         <p>This is where I will post about my journey learning Astro.</p>
         <ul>
@@ -21,5 +21,7 @@ import '../styles/global.css';
             <li><a href="/posts/post-2/">Post 2</a></li>
             <li><a href="/posts/post-3/">Post 3</a></li>
         </ul>
+
+		<Footer />
 	</body>
 </html>
