--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 
@@ -14,7 +14,7 @@ import '../styles/global.css';
 		<title>My Astro Site</title>
 	</head>
 	<body>
-		<Navigation />
+		<Header />
 		<h1>Astro</h1>
 		<Footer />
 	</body>
