--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,16 @@ body {
   box-sizing: border-box;
 }
 
+/* Dark mode */
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
 /* h1 {
   margin: 1rem 0;
   font-size: 2.5rem;
