--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,18 @@
 ---
+import { getCollection } from "astro:content";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import BlogPost from '../components/BlogPost.astro';
-const allPosts = await Astro.glob('../pages/posts/*.md');
-const pageTitle = "My Dev Blog";
+import BlogPost from "../components/BlogPost.astro";
+
+const pageTitle = "My Astro Learning Blog";
+const allPosts = await getCollection("posts");
 ---
-<!-- Despues crear un mejor layout para que se vea como blog, una cuadrícula de posts -->
 <BaseLayout pageTitle={pageTitle}>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-	{allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+    {
+      allPosts.map((post) => (
+        <BlogPost url={`/posts/${post.slug}/`} title={post.data.title} />
+      ))
+    }
   </ul>
 </BaseLayout>
