--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,27 @@
 ---
-import Greeting from '../components/Greeting';
-import BaseLayout from '../layouts/BaseLayout.astro';
-const pageTitle = "Home Page";
+import Greeting from "../components/Greeting";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "Carlos Rangel Dev";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-	<h2>My awesome blog subtitle</h2>
-	<Greeting client:load messages={["Hi", "Hello", "Howdy", "Hey there"]} />
+  <style>
+    h2,
+    .gradient {
+      font-size: clamp(2rem, 10vw, 8rem);
+    }
+
+    .gradient {
+      background-image: linear-gradient(
+        92deg,
+        #6a68d9 10%,
+        #da6cae 60%,
+        #f5a957
+      );
+      -webkit-text-fill-color: #0000;
+      -webkit-background-clip: text;
+    }
+  </style>
+  <h2>Web <span class="gradient">Developer</span></h2>
+  <Greeting client:load messages={["Hi", "Hello", "Howdy", "Hey there"]} />
 </BaseLayout>
