Add legend to Home

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,6 +22,6 @@ const pageTitle = "Carlos Rangel Dev";
       -webkit-background-clip: text;
     }
   </style>
-  <h2>Web <span class="gradient">Developer</span></h2>
+  <h2>Web <span class="gradient">Developer from Mexico</span></h2>
   <Greeting client:load messages={["Hi", "Hello", "Howdy", "Hey there"]} />
 </BaseLayout>
