Change the CV file in the site with another one for a drive

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const pageTitle = "Carlos Rangel Dev";
       <p>I am a programmer from Aguascalientes, México</p>
       <p>I like to learn new stuff on the web, books and courses. I like to practice judo and read scary books in my free time.</p>
 
-      <a href="/public/CV_Web_Developer_Carlos_Rangel.pdf" class="btn">Download CV</a>
+      <a href="https://drive.google.com/file/d/1bm7KByEU9Ox6pb1GXYq6qQhd4fGpKIpr/view?usp=sharing" target="_blank" class="btn">Download CV</a>
     </div>
 
     <div class="home-img">
