--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -125,7 +125,8 @@ h1 {
 
 .nav-links a:hover,
 .nav-links a:focus {
-  background-color: #ff9776;
+  color: white;
+  background-color: purple;
 }
 
 .expanded {
