Added a new blog post and also changed the About page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,7 +9,8 @@ const identity = {
   hobbies: ["playing videogames", "reading poetry", "judo", "gym"],
 };
 
-const skills = ["HTML", "CSS", "JavaScript", "TypeScript", "React", "Astro"];
+const skills = ["HTML", "CSS", "JavaScript", "React", "Next.js", "Python", "PHP", "Laravel", "SQL"];
+const learning = ["TypeScript", "Astro", "English", "Three.js"];
 
 const happy = true;
 const finished = true;
@@ -39,8 +40,7 @@ const goal = 3;
     {
       identity.hobbies.length >= 2 && (
         <li>
-          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
-          .
+          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}.
         </li>
       )
     }
@@ -50,13 +50,10 @@ const goal = 3;
     {skills.map((skill) => <li class="skill">{skill}</li>)}
   </ul>
 
+  <p>I am currently learning:</p>
+  <ul>
+    {learning.map((subject) => <li class="skill">{subject}</li>)}
+  </ul>
+
   {happy && <p>I am happy to be learning Astro!</p>}
-  {finished && <p>I finished this tutorial!</p>}
-  {
-    goal === 3 ? (
-      <p>My goal is to finish in 3 days.</p>
-    ) : (
-      <p>My goal is not 3 days.</p>
-    )
-  }
 </BaseLayout>
