Implement Portfolio Page, change styles fro mobile first and add projects to portfolio

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,8 +5,10 @@ import ThemeIcon from './ThemeIcon.astro';
 ---
 <header>
   <nav>
-    <Hamburger />
-    <ThemeIcon />
+    <div class="header-head">
+      <Hamburger />
+      <ThemeIcon />
+    </div>
     <Navigation />
   </nav>
 </header>
