--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,7 +7,7 @@ const pageTitle = "My Astro Learning Blog";
 const allPosts = await getCollection("posts");
 ---
 <BaseLayout pageTitle={pageTitle}>
-  <p>This is where I will post about my journey learning Astro.</p>
+  <p>This is where I will post about my journey learning Astro, Next.js, ThreeJS, Python and more.</p>
   <ul>
     {
       allPosts.map((post) => (
